# diffusion-from-scratch

./: .gitigore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: mathematical_foundations.md
notebooks/: 01_diffusion_mentor.ipynb  01_foundations.ipynb
src/: __init__.py
src/models/: __init__.py  diffusion.py  unet.py
src/utils/: __init__.py  helpers.py  visualization.py
